# DTU_final_project

./: README.md  about_page.py  api.py  data.csv  pyproject.toml  pytest.ini
api/: api_utility_classes.py  pyproject.toml  xgboost_model_test.json
dashboard/: dashboard.py  dashboard_markup.py  ml_page.py  prediction_page.py  pyproject.toml  utility_classes.py  weather_page.py
e2e/: test_end_to_end.py
integration/: _test_weather_and_forecast_endspoint.py
tests/unit/: test_api_fetcher.py  test_data_processor.py  test_energy_price_model_trainer.py
unit/: test_price_predictor.py  test_transformer.py
