[tool.poetry]
name = "tests"
version = "0.1.0"
description = "Test modul til projektet"
authors = ["Kasper Udengaard <meinl.cym@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
httpx = "^0.28.1"
pytest-mock = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
